module(
    name = "toolchain_issue",
    version = "0.0.1",
    compatibility_level = 0,
)

bazel_dep(name = "toolchains_llvm", version = "1.6.0")
bazel_dep(name = "toolchains_llvm_bootstrapped", version = "0.5.5")
bazel_dep(name = "mimick", version = "0.9.0")
local_path_override(
    module_name = "mimick",
    path = "./submodules/mimick",
)

###########################
# OPTION 1: DOES NOT WORK
toolchain = use_extension("@toolchains_llvm_bootstrapped//extensions:toolchain.bzl", "toolchain")
toolchain.exec(
    arch = "x86_64",
    os = "linux",
)
toolchain.target(
    arch = "x86_64",
    os = "linux",
)
use_repo(toolchain, "llvm_toolchains")

register_toolchains("@llvm_toolchains//:all")
############################

############################
# OPTION 2 : WORKS
# llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
# llvm.toolchain(llvm_version = "20.1.7")
# use_repo(llvm, "llvm_toolchain")
#
# register_toolchains("@llvm_toolchain//:all")
############################
